--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -8,11 +8,15 @@ body {
 }
 
 .light {
-  --main-bg-color: #dadada;
-  --nav-bg-color: #1976d2;
-  --box-shadow-color: rgb(0 0 0 / 40%);
-  --paper-color: #fafafa;
-  --input-border-color: #111;
+  --main-bg-color: rgb(218, 218, 218);
+  --primary-color: rgb(25, 118, 210);
+  --primary-color-fade: rgba(25, 118, 210, 0.4);
+  --primary-color-dark: rgb(20, 86, 153);
+  --text-btn-hover: rgba(200, 200, 200, 0.5);
+  --subtitle-text-color: grey;
+  --box-shadow-color: rgba(0, 0, 0, 0.4);
+  --paper-color: rgb(250, 250, 250);
+  --input-border-color: rgb(17, 17, 17);
   --link-color: #065fd4;
   --alert-cell-color: #e80000;
   --budget-table-divider-color: rgba(224, 224, 224, 1);
@@ -35,6 +39,45 @@ body {
   gap: 4px;
 }
 
+.textBtn {
+  width: 100%;
+  cursor: pointer;
+  margin: 4px 0;
+  padding: 8px 12px;
+  border-radius: 4px;
+  background: none;
+  border: none;
+  font-size: 16px;
+  color: var(--primary-color);
+  transition: background-color 0.25s;
+}
+.textBtn:hover {
+  background-color: var(--text-btn-hover);
+}
+.textBtn:active {
+  background-color: var(--primary-color-fade);
+}
+
+.solidBtn {
+  width: 100%;
+  cursor: pointer;
+  margin: 4px 0;
+  padding: 8px 12px;
+  border-radius: 4px;
+  background: none;
+  border: none;
+  font-size: 16px;
+  color: var(--paper-color);
+  background-color: var(--primary-color);
+  transition: background-color 0.25s;
+}
+.solidBtn:hover {
+  background-color: var(--primary-color-dark);
+}
+.solidBtn:active {
+  background-color: var(--primary-color-fade);
+}
+
 .tableLink {
   color: var(--link-color);
   cursor: pointer;
@@ -55,7 +98,7 @@ body {
 /* Component Classes */
 .navBar {
   display: flex;
-  background-color: var(--nav-bg-color);
+  background-color: var(--primary-color);
 }
 
 .pageTitle {
@@ -164,7 +207,8 @@ body {
 }
 
 .profileEmail {
-  
+  color: var(--subtitle-text-color);
+  margin-bottom: 16px;
 }
 
 /* Page Classes */
