--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -35,8 +35,7 @@ body {
 .stack {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 4px;
+  gap: 8px;
 }
 
 .textBtn {
@@ -78,7 +77,7 @@ body {
   background-color: var(--primary-color-fade);
 }
 
-.solidBtn.wide .textBtn.wide {
+.solidBtn.wide, .textBtn.wide {
   width: 100%;
 }
 
