--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -18,6 +18,7 @@ body {
   --secondary-text-color: rgb(250, 250, 250);
   --button-text-color: rgb(25, 118, 210);
   --box-shadow-color: rgba(0, 0, 0, 0.4);
+  --modal-shadow-color: rgba(0, 0, 0, 0.6);
   --paper-color: rgb(250, 250, 250);
   --input-border-color: rgb(17, 17, 17);
   --link-color: #065fd4;
@@ -36,6 +37,7 @@ body {
   --secondary-text-color: rgb(225, 225, 225);
   --button-text-color: rgb(225, 225, 225);
   --box-shadow-color: rgba(0, 0, 0, 0.4);
+  --modal-shadow-color: rgba(0, 0, 0, 0.4);
   --paper-color: rgb(37, 88, 153);
   --input-border-color: rgb(17, 17, 17);
   --link-color: #68a9ff;
@@ -214,6 +216,27 @@ body {
 
 .budgetSummary .alertCell {
   background-color: var(--alert-cell-color);
+}
+
+.modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--modal-shadow-color);
+  z-index: 2;
+}
+
+.modalFrame {
+  padding: 24px;
+  margin: auto;
+  border: 1px solid var(--input-border-color);
+  border-radius: 12px;
+  background-color: var(--paper-color);
 }
 
 /* Page-Specific Component Classes */
