fixed styling of login feedback text

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -131,6 +131,10 @@ body {
   text-align: center;
 }
 
+.formError {
+  color: var(--alert-cell-color);
+}
+
 /* Component Classes */
 .navBar {
   display: flex;
