--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -226,7 +226,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
