input form now shows error messages

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -168,6 +168,14 @@ body {
   background-color: var(--main-bg-color);
 }
 
+.inputField.error .input {
+  border: 1px solid var(--alert-cell-color);
+}
+
+.inputField.error {
+  color: var(--alert-cell-color);
+}
+
 .inputField label {
   position: relative;
   top: 8px;
