--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -135,6 +135,16 @@ body {
   color: var(--alert-cell-color);
 }
 
+.profileBtn {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.profileBtn img {
+  border-radius: 24px;
+}
+
 /* Component Classes */
 .navBar {
   display: flex;
@@ -254,6 +264,10 @@ body {
 /* Page-Specific Component Classes */
 .profileInfo {
   text-align: center;
+}
+
+.profileImg {
+  border-radius: 128px;
 }
 
 .profileName {
