--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -138,11 +138,13 @@ body {
 .profileBtn {
   display: flex;
   align-items: center;
+  padding-right: 16px;
   gap: 10px;
 }
 
 .profileBtn img {
   border-radius: 24px;
+  /* border: 1px solid var(--input-border-color); */
 }
 
 /* Component Classes */
